Fix : btn style school training  (align item on mobile)

--- a/src/pages/Formations/Formations.scss
+++ b/src/pages/Formations/Formations.scss
@@ -26,8 +26,15 @@
         }
 
         &_btn {
-            margin-bottom: 35px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+
+            &_content {
+                margin-bottom: 35px;
+            }
         }
+
 
         &_option {
             color: $font-text-color;
